--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Julian Walterskirchen"
 title_separator          : "-"
 name                     : &name "Julian Walterskirchen"
 description              : &description "Research Associate at the Center for Crisis Early Warning, University of the Bundeswehr Munich"
-url                      : https://Julian-Walterskirchen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://jwalterskirchen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "jwalterskirchen.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
