--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,13 +1,13 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  name        : "Julian Walterskirchen"
+  uri         : "jwalterskirchen.github.io"
+  email       : "julian.walterskirchen@gmail.com"
+  bio         : "Julian Walterskirchen is a Research Associate at the Center for Crisis Early Warning."
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+  twitter     : "@JarryWotter"
+  google_plus : ""
 
 Name2 Name2:
   name        : "Name2 Name2"
