--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Julian Walterskirchen"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Researcher interested in quantitative conflict research."
   location         : "Germany"
   employer         : "Center for Crisis Early Warning"
   pubmed           : 
