--- a/_config.yml
+++ b/_config.yml
@@ -181,6 +181,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
+  workinprogress:
+    output: true
+    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
@@ -227,6 +230,15 @@ defaults:
       author_profile: true
       share: true
       comments: true
+  # _workinprogress
+  - scope:
+      path: ""
+      type: publications
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true    
   # _portfolio
   - scope:
       path: ""
@@ -239,7 +251,7 @@ defaults:
   # _presentations
   - scope:
       path: ""
-      type: talks
+      type: presentations
     values:
       layout: talk
       author_profile: true
