--- a/_config.yml
+++ b/_config.yml
@@ -269,7 +269,7 @@ permalink: /:categories/:title/
 # paginate_path: /page:num/
 timezone: Europe/Vienna # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
-
+remote_theme: mmistakes/minimal-mistakes
 # Plugins
 plugins:
   - jekyll-paginate
@@ -278,6 +278,7 @@ plugins:
   - jekyll-feed
   - jekyll-redirect-from
   - jekyll-remote-theme
+  - jekyll-include-cache
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
