--- a/_config.yml
+++ b/_config.yml
@@ -289,7 +289,7 @@ whitelist:
   - jemoji
 
 # theme: minimal-mistakes-jekyll
-# minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 
 # Archives
