--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification :
+google_site_verification : google-site-verification=ODEOiYOLyYUHDLMlANp6DCzk2DZFTNhEFjudL9ZHbbw
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
@@ -74,7 +74,7 @@ social:
 # Analytics
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
-  google:
+  google: "Julian Walterskirchen"
     tracking_id          :
 
 
@@ -115,6 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  bluesky          : "@jwalterskirchen.bsky.social"
 
 
 # Reading Files
