--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Julian Walterskirchen"
-  avatar           : "profile.png"
+  avatar           : "Julian_Walterskirchen_8605 (1).jpg"
   bio              : "Researcher interested in quantitative conflict research."
   location         : "Germany"
   employer         : "Center for Crisis Early Warning"
