--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Julian Walterskirchen"
-  avatar           : "Julian_Walterskirchen_8605 (1).jpg"
+  avatar           : "profile.jpg"
   bio              : "PhD student interested in quantitative conflict research."
   location         : "Sweden"
   employer         : "University of Gothenburg"
