--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Julian Walterskirchen"
 description              : &description "PhD Student, Department of Political Science, University of Gothenburg"
 url                      : https://jwalterskirchen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "jwalterskirchen.github.io"
+repository               : "https://github.com/jwalterskirchen/jwalterskirchen.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -87,7 +87,7 @@ author:
   employer         : "University of Gothenburg"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=HN2ETEIAAAAJ&hl=en"
-  email            :
+  email            : "julian.walterskirchen@gu.se"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
